<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/part_event_height"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/event_name_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name"
                    android:textSize="@dimen/text_size"
                    android:onClick="onClick"/>

                <TextView
                    android:id="@+id/in_work_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="@string/in_work"
                    android:textSize="@dimen/text_size"
                    android:layout_marginLeft="60dp"
                    android:onClick="onClick"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/part_event_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create_event_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_event"
                    android:textSize="@dimen/text_size"
                    android:onClick="onClick"/>

                <TextView
                    android:id="@+id/date_create_event_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/date_create_event"
                    android:onClick="onClick"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/part_event_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reg_event_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_event"
                    android:textSize="@dimen/text_size"
                    android:onClick="onClick"/>

                <TextView
                    android:id="@+id/date_reg_event_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/date_regist_event"
                    android:onClick="onClick"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/part_event_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/resolve_event_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resolve_to"
                    android:textSize="@dimen/text_size"
                    android:onClick="onClick"/>

                <TextView
                    android:id="@+id/date_resolve_event_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/resolve_to_date"
                    android:onClick="onClick"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/part_event_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/liable_event_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/liable"
                    android:textSize="@dimen/text_size"
                    android:onClick="onClick"/>

                <TextView
                    android:id="@+id/date_liable_event_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/liable_name"
                    android:onClick="onClick"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/describe_event_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/describe_event"
                android:onClick="onClick"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/event_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="horizontal"
                android:layout_marginEnd="30dp"
                android:onClick="onClick"
                >

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>